k8s/ingress/co2-pricing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co2-pricing-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: co2-pricing-app-service
            port:
              number: 80
